--- a/app/views/templates/apply.html
+++ b/app/views/templates/apply.html
@@ -1,26 +1,45 @@
-<style>
-	.applySocially, .uploadCV {
-		text-align: center;
-	}
-</style>
 
-<div class = "apply well">
-	<div class = "applySocially">
-		<!-- if logged in, not sure how it will work to have this -->
-		Apply Socially
-		<div class = "applyLinkedIn"></div>
-	</div>
-	<div>
-		<input type="file" class="form-control btn" id="image" onchange="angular.element(this).scope().s3Upload(this)">
-		<p id="status">Please select a file</p>
-		<img id="preview" src="/images/blank_teacher.png" />
+<!-- ALERTS -->
+<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)">
+		<span ng-bind-html="alert.msg"></span>
+</alert>
 
-		<form method="POST" action="/submit_form/">
-			<input type="hidden" id="avatar_url" name="avatar_url" value="/public/default.png" />
-			<input type="text" name="username" placeholder="Username" /><br />
-			<input type="text" name="full_name" placeholder="Full name" /><br /><br />
-			<input type="submit" value="Update profile" />
+<!-- APPLY BOX --> 
+<div id="apply" class = "apply_box well">
+	<h4 class="text-center">Apply</h4>
+	<div class = "apply_socially"></div>
+	<div class = "apply_traditionally">
+		<form novalidate class="css-form" name="applicationForm">
+			<div class="not-logged-in" ng-if="!user">
+				<div class ="text-center loginSuggest">
+					<!-- it would be nice if this returned us to this page after logging in -->
+					<small class="text-center">Already a user? Apply easily by <a ng-href="/#/login">logging in</a> first.</small>
+				</div>				
+				<div class = "form-group">
+					<input class="form-control" type="text" ng-model="applicant.name" placeholder="Enter First Name">
+				</div>
+				<div class = "form-group">
+					<input class="form-control" type="email" ng-model="applicant.email" name="email" placeholder="Enter Email" >
+					<small>That email is already in use. Why don't you <a ng-href="/#/login">sign in</a> first?</small>
+				</div>
+			</div>
+			<div class = "coverLetter form-group">
+				<textarea class="textarea form-control" placeholder="Enter a note / cover letter (optional)" ng-model="applicant.why"></textarea>
+			</div>
 		</form>
-	</div>
-
+			<div class = "form-group">
+				<!--button class="btn btn-default llClear" ng-if="user.cv" ng-click="deleteCV()">Delete</button-->
+				<span class="btn btn-default llClear" ngf-select ngf-change="upload($files)" ng-show="applicant.name && applicant.email || user">
+					<span ng-if="user.cv">Update CV</span>
+					<span ng-if="!user.cv">Upload CV</span>
+				</span>
+				<a ng-show="user.cv.length > 0" ng-href="{{user.cv}}" target="blank_" class="btn btn-default llClear">Download CV</a>
+			</div>
+			<!-- <div class="button btn btn-default form-group" ngf-select ngf-change="upload($files)">
+				Upload New CV
+			</div>	 -->
+		</div>					<br>
+		<div class = "submitApplication form-group text-center" ng-show="applicant.name && applicant.email || user">
+			<button class="btn btn-primary" ng-click="apply()">{{doneApplied}}</button>
+		</div>
 </div>
