--- a/app/views/templates/jobSnapshot.html
+++ b/app/views/templates/jobSnapshot.html
@@ -31,6 +31,9 @@
 		<a class = "" ng-href="#/job-edit/{{job.$id}}" ng-if="admin">Edit</a>
 		<label class="status text-center" disabled>{{ ' - ' + status[job.status]}}</label>
 	</span>
+	<span>
+		<a>Share</a>
+	</span>
 	<small class="whenUpdated pull-right"><span am-time-ago="job.dateModified"></span></small>
 	<!--notes notes="notes" can-add="true"></notes-->
 </div>
