--- a/app/views/jobview.html
+++ b/app/views/jobview.html
@@ -56,9 +56,9 @@
 	.loginSuggest {
 		padding-bottom: 5px;
 	}
-	  .css-form input.ng-invalid.ng-touched {
-	    background-color:#FA787E;
-	  }
+  .css-form input.ng-invalid.ng-touched {
+    background-color:#FA787E;
+  }
 
   
 </style>
@@ -109,50 +109,18 @@
 		<div class = "description">
 			{{job.longDesc}}
 		</div>
+		<apply userid="user.$id" jobid="job.$id"></apply>
+
 	</div>
-	<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)">
-		<span ng-bind-html="alert.msg"></span>
-	</alert>
-	<div id="apply" class = "apply_box well">
-		<h4 class="text-center">Apply</h4>
-		<div class = "apply_socially"></div>
-		<div class = "apply_traditionally">
-			<form novalidate class="css-form" name="applicationForm">
-				<div class="not-logged-in" ng-if="!user">
-					<div class ="text-center loginSuggest">
-						<!-- it would be nice if this returned us to this page after logging in -->
-						<small class="text-center">Already a user? Apply easily by <a ng-href="/#/login">logging in</a> first.</small>
-					</div>				
-					<div class = "form-group">
-						<input class="form-control" type="text" ng-model="applicant.name" placeholder="Enter First Name">
-					</div>
-					<div class = "form-group">
-						<input class="form-control" type="email" ng-model="applicant.email" name="email" placeholder="Enter Email" >
-						<small>That email is already in use. Why don't you <a ng-href="/#/login">sign in</a> first?</small>
-					</div>
-				</div>
-				<div class = "coverLetter form-group">
-					<textarea class="textarea form-control" placeholder="Enter a note / cover letter (optional)" ng-model="applicant.why"></textarea>
-				</div>
-			</form>
-				<div class = "form-group">
-					<!--button class="btn btn-default llClear" ng-if="user.cv" ng-click="deleteCV()">Delete</button-->
-					<span class="btn btn-default llClear" ngf-select ngf-change="upload($files)" ng-show="applicant.name && applicant.email || user">
-						<span ng-if="user.cv">Update CV</span>
-						<span ng-if="!user.cv">Upload CV</span>
-					</span>
-					<a ng-show="user.cv.length > 0" ng-href="{{user.cv}}" target="blank_" class="btn btn-default llClear">Download CV</a>
-				</div>
-				<!-- <div class="button btn btn-default form-group" ngf-select ngf-change="upload($files)">
-					Upload New CV
-				</div>	 -->
-			</div>					<br>
-			<div class = "submitApplication form-group text-center" ng-show="applicant.name && applicant.email || user">
-				<button class="btn btn-primary" ng-click="apply()">{{doneApplied}}</button>
-			</div>
+	
 	</div>
+	</div>
+
+	
 </div>
-</div>
+
+
+
 
 <div class = "right col-lg-4 col-md-5 col-sm-6">
 	<div class = "related-jobs">
@@ -167,9 +135,8 @@
 </div>
 
 
-<apply user-id="user.$id" job-id="job.$id"></apply>
-
     <!--img ngf-src="files[0]" ngf-default-src="'/thumb.jpg'" ngf-accept="'image/*'"-->
 
 
 {{u.cv}}
+
