--- a/app/views/templates/apply.html
+++ b/app/views/templates/apply.html
@@ -1,3 +1,14 @@
+<style>
+.css-form input.ng-invalid.ng-touched {
+	background-color:#FA787E;
+}
+.apply_box {
+	margin-top:30px;
+	background: white;
+}
+</style>
+
+
 
 <!-- ALERTS -->
 <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)">
@@ -19,8 +30,8 @@
 					<input class="form-control" type="text" ng-model="applicant.name" placeholder="Enter First Name">
 				</div>
 				<div class = "form-group">
-					<input class="form-control" type="email" ng-model="applicant.email" name="email" placeholder="Enter Email" >
-					<small>That email is already in use. Why don't you <a ng-href="/#/login">sign in</a> first?</small>
+					<input class="form-control" type="email" ng-model="applicant.email" name="email" placeholder="Enter Email">
+					<small ng-show="emailExists_">That email is already in use. Why don't you <a ng-href="/#/login">sign in</a> first?</small>
 				</div>
 			</div>
 			<div class = "coverLetter form-group">
