--- a/app/views/templates/job.html
+++ b/app/views/templates/job.html
@@ -146,7 +146,10 @@
 <!-- it will have public fields and private fields, including a list of applicants -->
 
 <div class="page-header">
-	<h1><a ng-href="#/jobview/{{job_.$id}}">{{job_.title }}</a></h1>
+	<h1>
+		<a ng-href="#/jobview/{{job_.$id}}">{{job_.title }}</a>
+		<button class="btn btn-primary pull-right" ng-click="view()">View</button>
+	</h1>
 </div>
 
 
