--- a/app/views/templates/jobApplicants.html
+++ b/app/views/templates/jobApplicants.html
@@ -7,9 +7,9 @@
 			<th></th>
 			<th></th>
 			<th>
-				<button class="btn btn-xs" ng-click="deleteApplicants()">delete</button>
-				<button class="btn btn-xs">cv</button>
-				<button class="btn btn-xs">cover letter</button>
+				<button ng-show="someSelected" class="btn btn-xs" ng-click="deleteApplicants()">delete</button>
+				<!--button class="btn btn-xs">cv</button-->
+				<!--button class="btn btn-xs">cover letter</button-->
 			</th>
 		</tr>
 	</thead>
@@ -22,7 +22,7 @@
 			<td>
 				<a ng-if="a.cv" href="{{a.cv}}" target="blank_">CV</a>
 				<a ng-if="a.appliedTo[jobid].note" href="{{a.appliedTo[jobid].note}}" target="blank_">Cover Letter</a>
-				<button class="btn btn-xs" ng-click="deleteApplicant(a.$id, jobid)">delete</button>
+				<!--button class="btn btn-xs" ng-click="deleteApplicant(a.$id, jobid)">delete</button-->
 				<!--button class="btn btn-xs btn-warning" ng-click="rejectApplicant($index)">Reject</button-->
 			</td>			
 		</tr>		
