--- a/app/views/payments.html
+++ b/app/views/payments.html
@@ -16,7 +16,20 @@
 </div>
 
 
-
+<table class="table">
+		<tr>
+			<th>Total Revenue</th>
+			<th>Total Costs</th>
+			<th>Total Invested</th>
+			<th>Total Profit</th>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+</table>
 
 <table class = "table table-striped booksTbl">
 	<thead>
@@ -26,20 +39,25 @@
 		<!-- <th>Date Added</th>
 		<th>Date Modified</th> -->
 		<th>Amount</th>
-		<th>Job</th>
+		<th>What For</th>
 		<th>Paid By</th>
 		<th>Paid To</th>
 	</thead>
 	<tbody>
 		<tr ng-repeat="i in items">
+<!-- 					<td><pre>{{i || json}}</pre></td>
+ -->
 			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
 			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
 
 			<td>{{i.whenPaid | date:'MM/dd/yy'}}</td>
 			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
 			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
-			<td>{{i.amount}} {{i.currency}}</td>
-			<td><a ng-if="i.job" ng-href="#/jobview/{{i.job}}">Job</a></td>
+			<td>{{i.amount}} {{i.currency === "0" ? "RMB" : "USD"}}</td>
+			<td>
+				<a ng-if="i.job" ng-href="#/jobview/{{i.job}}">{{i.jobtitle}}</a>
+				<span ng-if="i.whatFor && !i.job">{{i.whatFor}}</span>
+			</td>
 			<td><visit who="i.paidBy"></visit></td>
 			<td><visit who="i.paidTo"></visit></td>
 		</tr>
