--- a/app/views/paymentsedit.html
+++ b/app/views/paymentsedit.html
@@ -6,11 +6,11 @@
 		<tab heading = "Deets">
 			<div class = "form-group">
 				<label>Paid By</label>
-				<select class="form-control" ng-model="payment.paidBy" ng-options="u.$id as u.firstName for u in users"></select>
+				<select class="form-control" ng-model="payment.paidBy" ng-options="u.$id as u.firstName for u in users" ng-change="payment.$save()"></select>
 			</div>	
 			<div class ="form-group">
 				<label>Paid To</label>
-				<select class="form-control" ng-model="payment.paidTo" ng-options="u.$id as u.firstName for u in users"></select>
+				<select class="form-control" ng-model="payment.paidTo" ng-options="u.$id as u.firstName for u in users" ng-change="payment.$save()"></select>
 			</div>		
 			<div class = "form-group">
 				<label>Amount</label>
@@ -18,14 +18,51 @@
 			</div>		
 			<div class = "form-group">
 				<label>Currency</label>
-				<input type="text" class="form-control" ng-model="payment.currency" ng-change="payment.$save()">
+				<select class="form-control" ng-model="payment.currency" ng-change="payment.$save()">
+					<option value=""></option>
+					<option value="0">RMB</option>
+					<option value="1">USD</option>
+				</select>
+			</div>
+			<div class = "form-group">
+				<label>Payment type:</label><br>
+				<input type="radio" name="paymentType" ng-model="payment.paymentType" value="0" ng-change="payment.$save()"> Revenue<br>
+				<input type="radio" name="paymentType" ng-model="payment.paymentType" value="1" ng-change="payment.$save()"> Cost<br>
+				<input type="radio" name="paymentType" ng-model="payment.paymentType" value="2" ng-change="payment.$save()"> Transfer
+			</div>
+			<div class="form-group" ng-show="payment.paymentType == 0">
+				<label>Reinvestment rate</label><br>
+				<input type="number" style="border-radius:4px;" ng-model="payment.reinvestmentRate" ng-change="payment.$save()" class=""> %
+			</div>
+			<div class="form-group" ng-show="payment.paymentType == 0">
+				<label>Liability</label>
+
+				<br>
+
+				<label><small>Unit Cost</small><label>
+				<input type="number" ng-model="payment.liability.unitCost" class="form-control">
+				<select ng-model="payment.liability.currency" ng-change="payment.$save()" class="form-control">
+					<option value=""></option>
+					<option value="0">RMB</option>
+					<option value="1">USD</option>
+				</select>
+
+
+				<br>
+
+				<label><small>Number of units</small></label>
+				<input type="number" ng-model="payment.liability.unitNum">
+
 			</div>
 			<div class = "form-group">
 				<label>Job <small>If applicable</small>
-				<select class="form-control" ng-model="payment.job" ng-change="payment.$save()">
+				<select class="form-control" ng-model="payment.job" ng-change="payment.$save()" ng-options="j.$id as j.title for j in jobs">
 				<option></option>
- 				<option ng-repeat="j in jobs" value="{{j.$id}}">{{j.title}}</option>
  				</select>
+			</div>
+			<div class = "form-group" ng-hide="payment.job">
+				<label>What For <small style="font-weight:normal">(Not necessary if associated with an agency fee / class payment)</small></label>
+				<input type="text" class="form-control" ng-model="payment.whatFor" ng-change="payment.$save()">
 			</div>
 			<div class = "form-group birthday">
 				<label>Date of Payment</label>
