--- a/app/views/payments.html
+++ b/app/views/payments.html
@@ -20,19 +20,70 @@
 		<tr>
 			<th>Total Revenue</th>
 			<th>Total Costs</th>
-			<th>Total Invested</th>
+			<th>Gross Investments</th>
+			<th>Net Investments</th>
 			<th>Total Profit</th>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td>¥{{totalRevenue}}</td>
+			<td>¥{{totalCost}}</td>
+			<td>¥{{grossInvestment}}</td>
+			<td>¥</td>
+			<td>¥{{totalProfit}}</td>
 		</tr>
 </table>
 
+
+<!-- PAYMENTS IN -->
 <table class = "table table-striped booksTbl">
 	<thead>
+		<tr><td colspan="10" class="text-center"><h3>PAYMENTS IN</h3></td></tr>
+		<th></th>
+		<th></th>
+		<th>Paid On</th>
+		<!-- <th>Date Added</th>
+		<th>Date Modified</th> -->
+		<th>Revenue</th>
+		<th>Liability</th>		
+		<th>Savings</th>
+		<th>Profit</th>
+		<th>Job</th>
+		<th>From</th>
+		<th>To</th>
+	</thead>
+	<tbody>
+		<tr ng-repeat="i in paymentsIn">
+			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
+			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
+
+			<td>{{i.whenPaid | date:'MM/dd/yy'}}</td>
+			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
+			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
+			<td>{{i.amount}}</td>
+			<td>{{i.liabilityAmt}}</td>
+			<td>{{i.savings}}</td>
+			<td>{{i.profit}}</td>
+			<td>
+				<a ng-if="i.job" ng-href="#/jobview/{{i.job}}">{{i.jobtitle}}</a>
+				<span ng-if="i.whatFor && !i.job">{{i.whatFor}}</span>
+			</td>
+			<td><visit who="i.paidBy"></visit></td>
+			<td><visit who="i.paidTo"></visit></td>
+		</tr>
+		<tr style="font-weight:bold">
+			<td></td>
+			<td></td>
+			<td></td>
+			<td>¥{{totalRevenue}}</td>
+			<td></td>
+		</tr>
+	</tbody>
+</table>
+
+<!-- PAYMENTS OUT -->
+<table class = "table table-striped booksTbl">
+	<thead>
+		<tr><td colspan="10" class="text-center"><h3>PAYMENTS OUT</h3></td></tr>
 		<th></th>
 		<th></th>
 		<th>Date Paid</th>
@@ -40,17 +91,48 @@
 		<th>Date Modified</th> -->
 		<th>Amount</th>
 		<th>What For</th>
-		<th>Paid By</th>
-		<th>Paid To</th>
+		<th>From</th>
+		<th>To</th>
 	</thead>
 	<tbody>
-		<tr ng-repeat="i in items">
-<!-- 					<td><pre>{{i || json}}</pre></td>
- -->
+		<tr ng-repeat="i in paymentsOut">
 			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
 			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
 
 			<td>{{i.whenPaid | date:'MM/dd/yy'}}</td>
+			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
+			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
+			<td>{{i.currency === "0" ? "¥" : "$"}}{{i.amount}}</td>
+			<td>
+				<a ng-if="i.job" ng-href="#/jobview/{{i.job}}">{{i.jobtitle}}</a>
+				<span ng-if="i.whatFor && !i.job">{{i.whatFor}}</span>
+			</td>
+			<td><visit who="i.paidBy"></visit></td>
+			<td><visit who="i.paidTo"></visit></td>
+		</tr>
+	</tbody>
+</table>
+
+<!-- TRANSFERS -->
+<table class = "table table-striped booksTbl">
+	<thead>
+		<tr><td colspan="10" class="text-center"><h3>TRANSFERS</h3></td></tr>
+		<th></th>
+		<th></th>
+		<th>Date Paid</th>
+		<!-- <th>Date Added</th>
+		<th>Date Modified</th> -->
+		<th>Amount</th>
+		<th>What For</th>
+		<th>From</th>
+		<th>To</th>
+	</thead>
+	<tbody>
+		<tr ng-repeat="i in transfers">
+			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
+			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
+
+			<td>{{i.currency === "0" ? "¥" : "$"}}{{i.amount}}</td>
 			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
 			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
 			<td>{{i.amount}} {{i.currency === "0" ? "RMB" : "USD"}}</td>
