--- a/app/views/payments.html
+++ b/app/views/payments.html
@@ -15,36 +15,22 @@
 	</h1>		
 </div>
 
+<div class="">Current savings: ¥{{totalSavings - (totalCost * 6.2)}}</div>
 
-<table class="table">
-		<tr>
-			<th>Total Revenue</th>
-			<th>Total Costs</th>
-			<th>Gross Investments</th>
-			<th>Net Investments</th>
-			<th>Total Profit</th>
-		</tr>
-		<tr>
-			<td>¥{{totalRevenue}}</td>
-			<td>¥{{totalCost}}</td>
-			<td>¥{{grossInvestment}}</td>
-			<td>¥</td>
-			<td>¥{{totalProfit}}</td>
-		</tr>
-</table>
 
 
 <!-- PAYMENTS IN -->
 <table class = "table table-striped booksTbl">
 	<thead>
 		<tr><td colspan="10" class="text-center"><h3>PAYMENTS IN</h3></td></tr>
-		<th></th>
-		<th></th>
+<!-- 		<th></th>
+ -->		<th></th>
 		<th>Paid On</th>
 		<!-- <th>Date Added</th>
 		<th>Date Modified</th> -->
-		<th>Revenue</th>
-		<th>Liability</th>		
+		<th>Gross</th>
+		<th>Liability</th>	
+		<th>Net</th>	
 		<th>Savings</th>
 		<th>Profit</th>
 		<th>Job</th>
@@ -54,13 +40,14 @@
 	<tbody>
 		<tr ng-repeat="i in paymentsIn">
 			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
-			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
+			<!--td><batch-delete item="i" control="focusinControl"></batch-delete></td-->
 
 			<td>{{i.whenPaid | date:'MM/dd/yy'}}</td>
 			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
 			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
 			<td>{{i.amount}}</td>
 			<td>{{i.liabilityAmt}}</td>
+			<td>{{i.amount - i.liabilityAmt}}</td>
 			<td>{{i.savings}}</td>
 			<td>{{i.profit}}</td>
 			<td>
@@ -71,11 +58,14 @@
 			<td><visit who="i.paidTo"></visit></td>
 		</tr>
 		<tr style="font-weight:bold">
-			<td></td>
-			<td></td>
+<!-- 			<td></td>
+ -->			<td></td>
 			<td></td>
 			<td>¥{{totalRevenue}}</td>
-			<td></td>
+			<td>¥{{totalLiabilities}}</td>
+			<td>¥{{totalRevenue - totalLiabilities}}</td>
+			<td>¥{{totalSavings}}</td>
+			<td>¥{{totalProfits}}</td>
 		</tr>
 	</tbody>
 </table>
@@ -84,8 +74,8 @@
 <table class = "table table-striped booksTbl">
 	<thead>
 		<tr><td colspan="10" class="text-center"><h3>PAYMENTS OUT</h3></td></tr>
-		<th></th>
-		<th></th>
+<!-- 		<th></th>
+ -->		<th></th>
 		<th>Date Paid</th>
 		<!-- <th>Date Added</th>
 		<th>Date Modified</th> -->
@@ -97,8 +87,8 @@
 	<tbody>
 		<tr ng-repeat="i in paymentsOut">
 			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
-			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
-
+<!-- 			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
+ -->
 			<td>{{i.whenPaid | date:'MM/dd/yy'}}</td>
 			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
 			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
@@ -110,15 +100,23 @@
 			<td><visit who="i.paidBy"></visit></td>
 			<td><visit who="i.paidTo"></visit></td>
 		</tr>
+		<tr style="font-weight:bold">
+<!-- 			<td></td>
+ -->			<td></td>
+			<td></td>
+			<td>${{totalCost}}</td>			
+		</tr>
 	</tbody>
 </table>
+
+
 
 <!-- TRANSFERS -->
 <table class = "table table-striped booksTbl">
 	<thead>
 		<tr><td colspan="10" class="text-center"><h3>TRANSFERS</h3></td></tr>
-		<th></th>
-		<th></th>
+<!-- 		<th></th>
+ -->		<th></th>
 		<th>Date Paid</th>
 		<!-- <th>Date Added</th>
 		<th>Date Modified</th> -->
@@ -130,8 +128,41 @@
 	<tbody>
 		<tr ng-repeat="i in transfers">
 			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
-			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
+<!-- 			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
+ -->
+			<td>{{i.currency === "0" ? "¥" : "$"}}{{i.amount}}</td>
+			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
+			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
+			<td>{{i.amount}} {{i.currency === "0" ? "RMB" : "USD"}}</td>
+			<td>
+				<a ng-if="i.job" ng-href="#/jobview/{{i.job}}">{{i.jobtitle}}</a>
+				<span ng-if="i.whatFor && !i.job">{{i.whatFor}}</span>
+			</td>
+			<td><visit who="i.paidBy"></visit></td>
+			<td><visit who="i.paidTo"></visit></td>
+		</tr>
+	</tbody>
+</table>
 
+<!-- OTHER -->
+<table class = "table table-striped booksTbl">
+	<thead>
+		<tr><td colspan="10" class="text-center"><h3>OTHER</h3></td></tr>
+<!-- 		<th></th>
+ -->		<th></th>
+		<th>Date Paid</th>
+		<!-- <th>Date Added</th>
+		<th>Date Modified</th> -->
+		<th>Amount</th>
+		<th>What For</th>
+		<th>From</th>
+		<th>To</th>
+	</thead>
+	<tbody>
+		<tr ng-repeat="i in other">
+			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
+<!-- 			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
+ -->
 			<td>{{i.currency === "0" ? "¥" : "$"}}{{i.amount}}</td>
 			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
 			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
