--- a/app/views/jobs.html
+++ b/app/views/jobs.html
@@ -1,7 +1,15 @@
 <div class="page-header col-lg-12 col-sm-12">
 	<h1>Jobs<button class="btn btn-primary pull-right" ng-click="addJob()" ng-if="isAdmin">New</button>
+	<!-- <button class="btn btn-link hideBtn" ng-class="{hidden: !hideFilters}" ng-click="hideFilters = hideFilters ? false : true" >Filters</button> -->
+
 </h1>
+
 </div>
+
+
+	<button class="btn btn-link hideBtn" ng-class="" style="margin:0; padding:0;" ng-click="showFilters = showFilters === true ? false : true;">Filters</button>
+
+
 
 <style>
 	.filterBar {
@@ -38,12 +46,28 @@
 	.job-results .job-panel:last-of-type {
 		border-bottom:none;
 	}
+	.hidden {
+		display:none;
+	}
+	.show {
+		display:inline-block;
+	}
+	
 
 </style>
 <!-- filters -->
+
 <div class ="jobPageWrapper row">
-	<div class = "filterBar col-sm-1 col-lg-2 col-md-1 col-xl-1">
-		<div class = "filterContent">
+
+		
+
+	<div class = "filterBar col-sm-1 col-lg-2 col-md-1 col-xl-1" ng-class="{hidden: hideFilters, show: showFilters}">
+
+
+		<div class = "filterContent" >
+
+
+
 			<div class="form-group">
 				<label>Search</label><button class = "clearFilter btn-link btn btn-xs pull-right" ng-click="filterSearch = undefined">clear</button>
 				<input type="text" class="form-control" ng-model="filterSearch" placeholder="Search">
@@ -79,11 +103,14 @@
 				<button type="button" class="btn btn-link" ng-click="filterText = undefined; filterSearch = undefined;">
 					Clear All
 				</button>
-			</div>				
+<!-- 				<button class="btn btn-link hideBtn" ng-click="hideFilters = hideFilters ? false : true">Hide</button>
+ -->			</div>
+
 		</div>	
+
 	</div>
 
-	<div class = "job-results col-lg-8 col-xl-9">
+	<div class = "job-results col-lg-10 col-xl-9 col-md-8 col-sm-9">
 		<div class = "resultsNum">Showing {{filteredJobs.length}} jobs</div>
 		<div class="job-directive" ng-repeat="(key, job) in (filteredJobs = (jobs | orderBy: groupBy | jobsFilter: filterText | filter: filterSearch))">
 			<!--ll-job job="job"></ll-job-->
